# fuckPythonConfig

./: .gitignore  LICENSE  README.md  README.zh-CN.md  main.py  pyproject.toml
src/fuckpythonconfig/: __init__.py  core.py  exceptions.py  utils.py
