[project]
name = "fuckpythonconfig"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
# 设置行长度限制
line-length = 88
# 设置目标 Python 版本
target-version = "py313"
# 指定要检查的文件和目录
include = ["src/**/*.py"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
# 选择要启用的规则集
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "PL",    # pylint
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
# 忽略特定规则
ignore = [
    "E501",  # 行太长（由 line-length 处理）
    "PLR0913", # 函数参数太多
    "PLR0915", # 函数中语句太多
]

# 每个文件允许的自动修复规则
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# 使用双引号
quote-style = "double"
# 缩进样式
indent-style = "space"
# 跳过魔术尾随逗号
skip-magic-trailing-comma = false
# 行结尾样式
line-ending = "auto"

[tool.ruff.lint.isort]
# import 排序配置
known-first-party = ["fuckpythonconfig"]
force-sort-within-sections = true
split-on-trailing-comma = true

[tool.ruff.lint.mccabe]
# 圈复杂度限制
max-complexity = 10
